# ci-cd-implementation

./: .buildinfo  .gitignore  .secrets.baseline  LICENSE  README.md  api.html  changelog.html  development.html  example.py  example_tasks.json  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  setup_and_test.ps1
.github/workflows/: ci.yml  docs.yml  release.yml
_modules/: index.html
_modules/tasklib/: manager.html  models.html
_sources/: api.rst.txt  changelog.rst.txt  development.rst.txt
docs/: conf.py  index.rst  quickstart.rst
src/tasklib/: __init__.py  manager.py  models.py
tests/: test_manager.py  test_models.py
